GOA-2649 - menu overlap fix on the term page

--- a/app/styles/quickgo.scss
+++ b/app/styles/quickgo.scss
@@ -566,6 +566,7 @@ h5.active-filter:before{
 
 #term-section-nav {
   line-height: 2em;
+  background-color: #ffffff;
   &.fixed {
     position: fixed;
     top: 10px;
